<resources>
    <string name="app_name">FinalAndroidProject</string>

    <string name="to_search">Search Recipe</string>
    <string name="to_favourite">List of Favourites</string>
    <string name="search_edit">Search for recipes</string>
    <string name="title_item">Title: </string>
    <string name="url_item">Click the link below for more details \n</string>
    <string name="search_btn">Search</string>
    <string name="intro">The API has been shutting down
    Please search for Lasagna or Chicken Breast
    </string>
    <string name="coin_tbar">Coin</string>
    <string name="news_tbar">News</string>
    <string name="food_tbar">Food</string>
    <string name="station_tbar">Station</string>
    <string name="intro_rec">Instruction Recipe</string>
    <string name="version">Software Version: </string>
    <string name="instruction">Instruction:\n
        - This is the Recipe Search Engine\n
        - Filter what you want to search in the blank\n
        - Available only Lasagna or Chicken Breast\n
        - After type in, click on search to see results\n
        - Clicking on specific item to see details\n
        \n
        - Tap On Heart To Save\n
        - To view and make change go to Favourite\n
        - Empty heart indicates not save\n
        - Filled heart indicates recipe is already saved.
    </string>
    <string name="save_btn">Save</string>
    <string name="saved_title">List of Favourite</string>
    <string name="heart_instruction">
        ssss
    </string>

    <string name="searchTitle">Search Title</string>
    <string name="searchContent">Search Content</string>
    <string name="selectLanguage">Language: </string>
    <string name="selectSortBy">Sort By: </string>
    <string name="searchButton">Search</string>
    <string name="authorPhong">Author: </string>
    <string name="source">Source: </string>
    <string name="url">URL: </string>
    <string name="publishedAt">At: </string>
    <string name="description">Description: </string>
    <string name="title">Title: </string>
    <string name="content">Content: </string>
    <string name="viewArticle">View Article</string>
    <string name="saveArticle">Save Article</string>
    <string name="deleteArticle">Delete article</string>
    <string name="carIcon">Electric Car Charging Station finder</string>
    <string name="foodIcon">Recipe search</string>
    <string name="moneyIcon">Foreign currency</string>
    <string name="newsIcon">News Headlines search</string>
    <string name="viewSavedArticles">View saved articles</string>
    <string name="authorNewsName">Author’s name: </string>
    <string name="authorNewsNameText">May Abo-Alrejal</string>
    <string name="newsVersion">Activity version number: </string>
    <string name="newsVersionText">1</string>
    <string name="newsInstructions">Instructions on how to use NewsApi: </string>
    <string name="newsInstructionsText">This API is used to search articles, to find an article please follow the instruction below:\n
First, enter a word/phrase in title, content or both. Then, choose a language. After that, select how to sort the result. Last, click search.</string>
    <string name="newsImageDescription">The arctic image</string>
    <string name="saved">Saved</string>
    <string name="downloadImage">Downloading the image!</string>
    <string name="imageDownloaded">Image downloaded!</string>
    <string name="articleSaved">Article saved!</string>
    <string name="canntSave">Sorry! The article is already saved in your list.</string>


    <string name="ar">Arabic</string>
    <string name="de">German</string>
    <string name="en">English</string>
    <string name="fr">French</string>
    <string name="hi">Hindi</string>
    <string name="it">Italian</string>
    <string name="nl">Dutch</string>
    <string name="no">Norwegian</string>
    <string name="pt">Portuguese</string>
    <string name="ru">Russian</string>
    <string name="zh">Chinese</string>
    <string name="relevancy">Relevance</string>
    <string name="popularity">Popularity</string>
    <string name="published">Publish date</string>
    <string name="noArticle">Sorry! No articles found.</string>
    <string name="gotIt">Got it!</string>
    <string name="articalError">Please fill at least one of the search text!</string>
    <string name="searchArticle">Searching for related articles!</string>

    <string name="welcome">Currency Converter</string>
    <string name="convertedCurrency">Converted Currency</string>
    <string name="convert">Convert</string>
    <string name="tv_srcPrompt">FROM</string>
    <string name="tv_dstPrompt">TO</string>
    <string name="bt_addToFavList">ADD TO FAVORITE LIST</string>
    <string name="tbar_help">Help</string>
    <string name="tbar_favoritelist">Favorite List</string>
    <string name="tv_unavailable">Unavailable</string>
    <string name="info_from">Convert from: </string>
    <string name="info_to">Convert to: </string>
    <string name="info_date">Date of conversion: </string>
    <string name="info_rate">Rate: </string>
    <string name="tv_base">BASE</string>
    <string name="tv_converted">CONVERTED</string>
    <string name="author">Author: Manh Hoang Nguyen</string>
    <string name="version_num">Version 1</string>
    <string name="guide">
        How to use the conversion application:\n
        1. FROM: The currency code you want to convert.\n
        2. TO: The currency code you want to convert to.\n
        3. Enter the amount of money of conversion.\n
        4. Click the CONVERT button.\n</string>
    <string name="back">BACK</string>
    <string name="toast_wrongInput">Your input is not correct!</string>
    <string name="toast_nullScrCurrency">Please enter your source currency</string>
    <string name="toast_nullDstCurrency">"Please enter your destination currency"</string>
    <string name="toast_nullAmountOfMoney">Please enter your amount of money</string>
    <string name="toast_addToFavorite">Added to your favorite</string>
    <string name="toast_conversionExist">The coversion existed</string>
    <string name="toast_clickedOverFlowMenu">"You clicked to overflow menu item")</string>
    <string name="dialog_removeQuestion">Remove from Favorite List?</string>
    <string name="bt_remove">Remove</string>
    <string name="bt_cancel">Cancel</string>
    <string name="snackbar_tryAgain">Try again</string>
    <string name="et_baseMoneyHint">Base Money</string>
    <string name="et_dstMoneyHint">Destination Money</string>
    <string name="et_amountMoneyHint">Enter your money</string>

    <string name="frameText">What Is Your Favourite Recipe?</string>
    <string name="rights">\u00402019 Phong Le. All rights reserved.</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="swipe_to_refresh">Swipe to refresh</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="charge_station_finder">Charge Station Finder</string>
    <string name="no_content_now">No content here</string>
    <string name="author_info">Author: Po-Yen, Wu</string>
    <string name="version_info">Version: 1.0</string>
    <string name="title_2">Title</string>
    <string name="contact">Contact</string>
    <string name="unknown">unknown</string>
    <string name="unavailable">unavailable</string>
    <string name="loading">Loading...</string>
    <string name="max_results">Max results</string>
    <string name="general_settings">General Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="max_results_desc">Leave blank or use zero for default.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="distance_unit">Distance unit</string>
    <string name="distance_unit_desc">Miles or KMs</string>
    <string name="reset_favorites">Reset favorites</string>
    <string name="reset_favorites_desc">Delete everything from favorite list.</string>
    <string name="contact_unavailable">Contact unavailable</string>
    <string name="address_unavailable">Address unavailable</string>
    <string name="distance">distance</string>
    <string name="nothing_here">Nothing here</string>
    <string name="open_map">Open map</string>
    <string name="invalid_latitude">Invalid latitude</string>
    <string name="invalid_longitude">Invalid longitude</string>
</resources>
