<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/news"
        android:title="@string/news_tbar"
        android:icon="@drawable/news"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/food"
        android:title="@string/food_tbar"
        android:icon="@drawable/food"
        android:orderInCategory="200"
        app:showAsAction="always"/>

    <item android:id="@+id/coin"
        android:title="@string/coin_tbar"
        android:icon="@drawable/coin"
        android:orderInCategory="300"
        app:showAsAction="always"/>

    <item android:id="@+id/station"
        android:title="@string/station_tbar"
        android:icon="@drawable/station"
        android:orderInCategory="300"
        app:showAsAction="always"/>



    <item android:id="@+id/intro_recipe"
        android:title="@string/intro_rec"
        app:showAsAction="never"
        />

</menu>