<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/insIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/info"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/authorPhong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textSize="15dp"
        />
</LinearLayout>
