<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgview_dialog"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/author"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgview_dialog"
        android:text="@string/author"/>
    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/version_num"
        android:layout_below="@+id/author"/>
    <TextView
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/guide"
        android:layout_below="@+id/version"/>


</RelativeLayout>