<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/title" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:contentDescription="@string/newsImageDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/authorHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/author" />

        <TextView
            android:id="@+id/authorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sourceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/source" />

        <TextView
            android:id="@+id/sourceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/publishedAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/source"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/publishedAtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/publishedAt" />

        <TextView
            android:id="@+id/publishedAtText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/publishedAt"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/urlHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/url" />

        <TextView
            android:id="@+id/urlText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_weight="0.2" />
    </LinearLayout>

    <TextView
        android:id="@+id/contentHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/url"
        android:text="@string/content" />

    <ScrollView
        android:id="@+id/contentScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentHeader"
        android:layout_above="@+id/saveArticleButton"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/contentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </ScrollView>

    <Button
        android:id="@+id/saveArticleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/saveArticle" />

</RelativeLayout>