<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/title">

        <TextView
            android:id="@+id/titleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/title" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/author"
        android:layout_below="@+id/title">

        <TextView
            android:id="@+id/authorHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/author" />

        <TextView
            android:id="@+id/authorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/source"
        android:orientation="horizontal"
        android:layout_below="@+id/author">

        <TextView
            android:id="@+id/sourceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/source" />

        <TextView
            android:id="@+id/sourceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />
    </LinearLayout>

    <Button
        android:id="@+id/viewArticleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/source"
        android:text="@string/viewArticle" />

    <Space
        android:layout_width="match_parent"
        android:layout_below="@+id/viewArticleButton"
        android:layout_height="15dp" />

</RelativeLayout>